@@ -11,6 +11,7 @@ AUX 6.1/visualweb-JxpsSerializer.java-xerces-2.8.1.patch 2260 RMD160 262c5c7bc6d
 AUX 6.1/websvc.jaxws21-build.xml.patch 337 RMD160 8c217c1b7f7699be7a567ad4a471250355c686ac SHA1 6d779521f17d392643f2e56c752df4262d1c3eeb SHA256 3b5225b345596b05f8734757961624c499073e38900964d0308e28128dccefdb
 AUX 6.1/websvc.jaxws21api-build.xml.patch 346 RMD160 06a8fb2400812251621a13f642e7fc22ab7d4413 SHA1 f06d0ac3829983e3506e88638e43292ad4aaa15d SHA256 472f32352ca320a2522fe1096f3f8acdf619d6012e903dfe8f76e51e9806b662
 DIST netbeans-6.1-bundled.tar.bz2 222310744 RMD160 0da76fc5bd5c276c80f11b6e3b763e32ebe86748 SHA1 958ced3eebd563bc6faf09387e6b9fe7a0ad4040 SHA256 cc68db782a0be34134db525a77b70a8864cf174c94187e4c8ce92dbf182f5664
+DIST netbeans-6.5_m1-200807040101-src.zip 271290817 RMD160 131cdb495790ac67dc98c671776c8705de306608 SHA1 d1b6ceff7a78f7e5699f42bbfb9465bcf2f43f4a SHA256 46f57b27200a80e27fd534781ad07bf6706e12be6904c617531482ed43678a92
 DIST netbeans-ant-6.0.tar.bz2 3276705 RMD160 21ebea8f1c337271f1827b27134760f733e1c22f SHA1 ec65496e0232f10c42fe15ab8081a2fc03fdfc97 SHA256 f119a33febcb48cafd13d9186292a7fd1aca4bfb88794447004f84361432e57c
 DIST netbeans-apisupport-6.0.tar.bz2 1320763 RMD160 f67453d442b608455f1c75c4b405dc205dbce3f1 SHA1 ae8179ab57d931713ba4fb5c663632a41eee0a57 SHA256 73041e2e3e8cfc8d105607c6f4725ef28d256f560937347cd8abe1dc5d2df246
 DIST netbeans-autoupdate-6.0.tar.bz2 418233 RMD160 8eeff88d062ee3d3c96855f04d40034b54829ba0 SHA1 26ff2200ce0110fbdab672a7040f08de27b12ada SHA256 a6209a9814e7174ff298337b03e23dc32c9b1138ea03ed46b150b0f542904290
@@ -72,5 +73,6 @@ DIST netbeans-websvc-6.0.tar.bz2 21262337 RMD160 aa0eea92a59cad8c5907c9a5be41a1a
 DIST netbeans-xml-6.0.tar.bz2 4404173 RMD160 6360765b44e988fb1ad4e529630ac1abbc4dae9d SHA1 92f489b03154a8153f8508387886afb9fbfa1959 SHA256 5d63287da3cfc42cbfb24ab619d1e96ff625124e1225c5377aa5d8c22deaecd9
 EBUILD netbeans-6.0.ebuild 32690 RMD160 53bf60c90e06f5fbb4b08a2363e750abf0a1b563 SHA1 9725266d8090a628691fa55fa179d5f8c72a3799 SHA256 a663b402ecd295ed316307b1be3772781e9f87c4013f6b1670a1ce1ca99d7669
 EBUILD netbeans-6.1-r1.ebuild 16545 RMD160 ae5471ae840869fbc962fceb48f8ee811efae729 SHA1 d4782ff9271907bbb98e64029be47bfce3d8677a SHA256 b5ffe94c7e7f66a7981c076c54fdc847a5773f4cf890c789935fbaee07299c2e
+EBUILD netbeans-6.5_alpha1.ebuild 16878 RMD160 44e02e319a2d351ac215dcab59cd33fca042c3d0 SHA1 2023d3a96380e8c2892d06a34a64112cd28aa42e SHA256 f7fcac6d8f05d66e1e09652337f2f310eee2b30dbcc76f89852bf8c98786880e
 MISC ChangeLog 23188 RMD160 8b6708d8445f0b583fea5461da0cffe5850cd142 SHA1 fc217f2d744084718a464933a5a8131135b914c1 SHA256 bae8581b6740d2fa3f144b15d97faa9eb3df11663a212928bceabb8b95abc968
 MISC metadata.xml 1128 RMD160 9ba1b3fec0fedacd10416e7c61edfecada1912cd SHA1 997b3db42167a9e591c3667ffddd125bbb85fa98 SHA256 8c524b060fdbfc4aa432a528c2e78ad05eb20fcf4bc8973c1c8366699bb90b5a
