@@ -2,6 +2,10 @@
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 Aug 2008; Miroslav Šulc <fordfrog@gentoo.org> ++:
+  Added ebuild for netbeans 6.5 milestone 1 - but it seems it is not
+  possible to build netbeans using the official sources
+
   18 Jul 2008; Miroslav Šulc <fordfrog@gentoo.org> netbeans-6.1-r1.ebuild:
   Now depending on ant-1.7.1 which introduces /usr/share/ant/lib directory -
   reported by Betelgeuse
